syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.client.client_grpc";
option java_outer_classname = "HelloWorldClient";

service Simple {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}